# turo_crawler

./: .gitignore  README.md  crawler.py  example_usage.py  extract_vehicle_from_listing.py  main.py  navigation_example.py  pyproject.toml  receipt_processor.py  rental_extractor.py  requirements.txt
output/data/: example_data.json  navigation_001_Remove_car_from_favoritesRemov.json  navigation_002_Remove_car_from_favoritesRemov.json  navigation_003_Remove_car_from_favoritesRemov.json  page_data_20250712_001322.json  page_data_20250712_001802.json  page_data_20250712_001859.json
script/: chrome-debug.sh  start_chrome.sh
